# pitch-maker

./: .dockerignore  .env.example  Dockerfile  README.md  render.yaml
backend/: .gitignore  Dockerfile  config.py  main.py  pyproject.toml
backend/models/: schemas.py
backend/routes/: generate.py
backend/services/: job_store.py  prompt_loader.py  script_generator.py  video_assembler.py  visual_generator.py  voice_generator.py
backend/tests/: conftest.py  test_api.py  test_services.py
docs/: ARCHITECTURE.md  CHECKLIST.md  GUIA_BIA.md  PITCH_MAKER_HACKATHON_DEMO.md  PRESENTATION_SCRIPT.md  PROMPTS.md  SPEC.md  STITCH_PROMPTS.md
docs/stitch/noir_gilt/: DESIGN.md
docs/stitch/pitch_maker_input_form/: code.html
docs/stitch/pitch_maker_progress/: code.html
docs/stitch/pitch_maker_result/: code.html
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  StepProgress.tsx  VideoPlayer.tsx
frontend/src/pages/: GeneratingPage.tsx  InputPage.tsx  ResultPage.tsx
